Notify crud operation 'start' and 'end' to the frontend